--- a/qt_design/character.ui
+++ b/qt_design/character.ui
@@ -224,7 +224,7 @@
              <enum>QTabWidget::North</enum>
             </property>
             <property name="currentIndex">
-             <number>7</number>
+             <number>2</number>
             </property>
             <property name="elideMode">
              <enum>Qt::ElideNone</enum>
@@ -534,19 +534,59 @@
                <layout class="QVBoxLayout" name="verticalLayout_3">
                 <item>
                  <layout class="QGridLayout" name="gridLayout_9">
-                  <item row="0" column="0">
-                   <widget class="QGroupBox" name="groupBox_13">
-                    <property name="title">
-                     <string>Proficiencies and Languages</string>
-                    </property>
-                    <layout class="QVBoxLayout" name="verticalLayout_2">
-                     <item>
-                      <widget class="QTextEdit" name="PROFICIENCIES_LANGUAGES"/>
-                     </item>
-                    </layout>
-                   </widget>
+                  <item row="1" column="0">
+                   <layout class="QGridLayout" name="gridLayout_10">
+                    <item row="0" column="0">
+                     <widget class="QGroupBox" name="groupBox_20">
+                      <property name="title">
+                       <string>Languages</string>
+                      </property>
+                      <layout class="QHBoxLayout" name="horizontalLayout_18">
+                       <item>
+                        <layout class="QHBoxLayout" name="LANGUAGES_LAYOUT"/>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QGroupBox" name="groupBox_21">
+                      <property name="title">
+                       <string>Armor</string>
+                      </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_21">
+                       <item>
+                        <layout class="QHBoxLayout" name="ARMOR_LAYOUT"/>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QGroupBox" name="groupBox_22">
+                      <property name="title">
+                       <string>Tools</string>
+                      </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_2">
+                       <item>
+                        <layout class="QHBoxLayout" name="TOOLS_LAYOUT"/>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                    <item row="1" column="1">
+                     <widget class="QGroupBox" name="groupBox_13">
+                      <property name="title">
+                       <string>Weapons</string>
+                      </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_42">
+                       <item>
+                        <layout class="QHBoxLayout" name="WEAPONS_LAYOUT"/>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                   </layout>
                   </item>
-                  <item row="0" column="1">
+                  <item row="1" column="3">
                    <widget class="QGroupBox" name="groupBox_14">
                     <property name="title">
                      <string>Defenses</string>
